<resources>
    <string name="app_name">android_app</string>
    <string name="null_string">ХХХ</string>
    <string name="current_value">Current value</string>
    <string name="temperature_value">Temperature</string>
    <string name="humidity_value">Humidity</string>
    <string name="current_state">Current state</string>
    <string name="temperature">Temperature</string>
    <string name="on_off">ON/OFF</string>
    <string name="condition">Condition</string>
    <string name="status">Status:</string>
    <string name="status_unknown">Unknown</string>
</resources>