<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/active_load_background">

    <include
        android:id="@+id/include"
        layout="@layout/module_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include1"
        layout="@layout/condition"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
" />


    <TextView
        android:id="@+id/textView"
        style="@style/fieldDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/current_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <TextView
        android:id="@+id/stateField"
        style="@style/field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/null_string"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/fieldDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/fieldDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off"
        app:layout_constraintStart_toStartOf="@+id/stateField"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/onOff"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/off"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/coldHot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/onOff"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cold"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>